--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 
 				<ul class="copyright">
-					<li>&copy; 2025 Веткаль Артём, ИП ОГРНИП 325237500171361, ИНН 231126921253</li><li>Design: <a href="http://html5up.net">GOJO</a></li>
+					<li>&copy; 2025 Веткаль Артём, ИП ОГРНИП 325237500171361, ИНН 231126921253 +7(932)-444-44-93 Адрес: г.Москва, ул. Новогиреевская 20/34к2 Vetkalartem@gmail.com </li><li>Design: <a href="http://html5up.net">GOJO</a></li>
 				</ul>
 			</section>
 
@@ -456,4 +456,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
